Removing container name restrictions

--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -30,10 +30,6 @@
                         </div>
                         <br/>
 
-                        <div class="col-md-12 text-center" style="color: red"
-                             ng-show="validation.newContainerNameRequired">
-                            <strong>Container name not specified!</strong>
-                        </div>
                         <div class="col-md-3 vcenter text-right">
                             <strong>Name</strong>
                         </div>
@@ -44,7 +40,7 @@
                             <button ng-click="generateContainerName()" title="Generate random name" type="submit"
                                     class="btn btn-info"
                                     style="width: 40px; margin-right: 160px;margin-left: 3px;">
-                                <span class="fa fa-question-circle" style="font-size: large"></span>
+                                <span class="fa fa-magic" style="font-size: large"></span>
                             </button>
                     </span>
                         </div>
