Commenting out client only modes

--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -56,33 +56,34 @@
 
 
                         <div class="col-md-12">
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" ng-model="rm"> remove after exit (--rm)
-                                </label>
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" ng-model="detach"> detached mode (-d, --detach)
-                                </label>
-                            </div>
+                            <!--Not existing in the remote api-->
+                            <!--<div class="checkbox">-->
+                            <!--<label>-->
+                            <!--<input type="checkbox" ng-model="rm"> remove after exit (&#45;&#45;rm)-->
+                            <!--</label>-->
+                            <!--</div>-->
+                            <!--<div class="checkbox">-->
+                            <!--<label>-->
+                            <!--<input type="checkbox" ng-model="detach"> detached mode (-d, &#45;&#45;detach)-->
+                            <!--</label>-->
+                            <!--</div>-->
                             <div class="checkbox">
                                 <label>
                                     <input type="checkbox" ng-model="tty"> Allocate a pseudo-TTY (-t, --tty)
                                 </label>
                             </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" ng-model="interactive"> Keep STDIN open even if not attached
-                                    (-i,
-                                    --interactive=false)
-                                </label>
-                            </div>
+                            <!--Not existing in the remote api-->
+                            <!--<div class="checkbox">-->
+                            <!--<label>-->
+                            <!--<input type="checkbox" ng-model="interactive"> Keep STDIN open even if not attached-->
+                            <!--(-i,-->
+                            <!--&#45;&#45;interactive=false)-->
+                            <!--</label>-->
+                            <!--</div>-->
                             <div class="checkbox">
                                 <label>
                                     <input type="checkbox" ng-model="privileged"> Give extended privileges to this
-                                    container
-                                    (--privileged)
+                                    container (--privileged)
                                 </label>
                             </div>
                         </div>
